# app-taximetro

./: Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt  structure.txt  test_imports.py
.github/workflows/: app-config.yml
client-app-taximetro/: package-lock.json  package.json
client-app-taximetro/src/router/: Router.jsx
data/: config.json  history.txt
src/: cli.py  gui.py  taximeter.py  utils.py
tests/: test_cli.py  test_gui.py  test_taximeter.py  test_utils.py
